feat(sleep record): add attribute duration minutes of sleep
